modified:   css/main.css 	modified:   css/main.css.map 	modified:   index.html 	new file:   scss/block/_thrush.scss 	new file:   scss/block/_usage.scss 	modified:   scss/helpers/_functions.scss 	modified:   scss/main.scss

--- a/index.html
+++ b/index.html
@@ -143,7 +143,126 @@
             </section>
 
 
-            <!-- S -->
+            <!-- USAGE -->
+            <section class="usage slide">
+                <div class="usage__container container">
+
+                    <h2 class="usage__title">
+                        Схема применения препарата Экофуцин<span><span class="trademark--white">®</span></span>
+                    </h2>
+
+                    <div class="usage__content">
+                        <div class="usage__images">
+                            <img src="public/img/usage/usage-product-3.png" alt="Упаковка препарата" width="202"
+                                height="209" loading="lazy" draggable="false" />
+                            <img src="public/img/usage/usage-product-6.png" alt="Суппозитории" width="202" height="209"
+                                loading="lazy" draggable="false" />
+                        </div>
+
+                        <div class="usage__instructions">
+                            <h3>
+                                Схема лечения<span>1,2</span>
+                            </h3>
+
+                            <div class="usage__item">
+                                <img src="public/img/usage/usage-icon-use.png" alt="Иконка применения"
+                                    class="instruction-icon" width="55" height="55" loading="lazy" draggable="false" />
+                                <p>
+                                    <strong>Суппозитории</strong> применяют 1 раз в сутки, на
+                                    ночь, вводят во влагалище, находясь в положении лежа, как
+                                    можно глубже1
+                                </p>
+                            </div>
+
+                            <div class="usage__item">
+                                <img src="public/img/usage/usage-icon-duration.png" alt="Иконка продолжительности"
+                                    class="instruction-icon" width="55" height="55" loading="lazy" draggable="false" />
+                                <p>
+                                    <strong>Продолжительность курса лечения</strong> составляет
+                                    <strong>6 дней</strong>. После исчезновения симптомов
+                                    заболевания рекомендуется продолжать лечение еще несколько
+                                    дней1
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="usage__addons">
+                        <p>
+                            Дополнительными условиями эффективной терапии молочницы являются: отказ
+                            от вредных привычек, диета с ограничением углеводов, ношение нижнего
+                            белья из натуральных тканей и пр.
+                        </p>
+                        <p>
+                            *Схема применения препарата Экофуцин® беременным женщинам может
+                            назначаться лечащим врачом индивидуально.
+                        </p>
+                    </div>
+            </section>
+
+
+
+            <!-- THRUSH -->
+            <section class="thrush slide">
+                <div class="thrush__container container">
+
+                    <h2 class="thrush__title">Молочница при беременности</h2>
+                    <p class="thrush__description">
+                        Молочница – заболевание слизистой влагалища и вульвы, вызываемое
+                        дрожжеподобными грибами рода Candida, с которым сталкивается 50% женщин
+                        во время беременности5.
+                    </p>
+
+                    <div class="thrush__content">
+                        <div class="thrush__row">
+                            <div class="thrush__item">
+                                <p>
+                                    Беременность – это особенный период в жизни женщины, организм
+                                    перестраивается – изменяется гормональный фон, возрастает уровень
+                                    прогестерона, что приводит к снижению иммунитета, повышается
+                                    уровень эстрогенов, в связи с чем в слизистой оболочке влагалища
+                                    накапливается гликоген – питательная среда для дрожжеподобных
+                                    грибов рода Candida.
+                                </p>
+                            </div>
+
+                            <div class="thrush__item">
+                                <p>
+                                    В группе риска по возникновению рецидивирующей формы молочницы
+                                    находятся те беременные женщины, которые уже имели в анамнезе
+                                    эпизоды молочницы.
+                                </p>
+                                <img src="public/img/thruth/thruth-img.png" alt="Информационная карточка" width="199"
+                                    height="234" loading="lazy" draggable="false" />
+                            </div>
+                        </div>
+
+                        <div class="thrush__row">
+                            <div class="thrush__item">
+                                <p>
+                                    Лактобактерии являются преобладающими микроорганизмами микрофлоры
+                                    влагалища здоровой женщины. Нормальная концентрация лактобактерий
+                                    обеспечивает необходимую кислотность во влагалище, что подавляет
+                                    рост грибов. Также лактобактерии участвуют в формировании местного
+                                    иммунитета у женщин.
+                                </p>
+                            </div>
+
+                            <div class="thrush__item">
+                                <p>
+                                    Помимо этого, во время молочницы часто нарушается микрофлора
+                                    влагалища – количество лактобактерий резко снижается. Эти
+                                    изменения приводят к рецидивам молочницы.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+
 
         </div>
     </div>
