modified:   css/main.css 	modified:   css/main.css.map 	modified:   index.html 	modified:   main.js 	new file:   public/fonts/YanoneKaffeesatz-Light.ttf 	modified:   scss/_fonts.scss 	modified:   scss/_globals.scss 	modified:   scss/_utils.scss 	modified:   scss/block/_benefits.scss 	new file:   scss/block/_effectiveness.scss 	new file:   scss/block/_footer.scss 	modified:   scss/block/_header.scss 	modified:   scss/block/_hero.scss 	new file:   scss/block/_importance.scss 	new file:   scss/block/_symptoms.scss 	new file:   scss/block/_thanks.scss 	modified:   scss/block/_thrush.scss 	new file:   scss/block/_treatment.scss 	modified:   scss/block/_usage.scss 	modified:   scss/main.scss

--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
             </section>
 
 
-
             <!-- BENEFITS -->
             <section class="benefits slide">
 
@@ -202,7 +201,6 @@
             </section>
 
 
-
             <!-- THRUSH -->
             <section class="thrush slide">
                 <div class="thrush__container container">
@@ -262,6 +260,285 @@
                 </div>
             </section>
 
+
+            <!-- SYMPTOMS -->
+            <section class="symptoms slide">
+                <div class="symptoms__bg" style="background-image: url(public/img/symptoms/symptoms-bg.png);"></div>
+
+                <div class="symptoms__img">
+                    <img src="public/img/symptoms/symptoms-img.png" alt="" width="415" height="430" loading="lazy"
+                        draggable="false">
+                </div>
+
+                <div class="symptoms__container container">
+                    <h2 class="symptoms__title">Симптомы молочницы у беременной женщины:</h2>
+                    <p class="symptoms__description">
+                        Появление хотя бы одного из симптомов является причиной для внепланового
+                        обращения к врачу.
+                    </p>
+
+                    <ul class="symptoms__list">
+                        <li>
+                            <p>Зуд и жжение в области вульвы и/или влагалища, отечность
+                                и раздражение в области наружных половых органов</p>
+                        </li>
+
+                        <li>
+                            <p>Выделения «творожистого характера» из влагалища, иногда
+                                появление неприятного запаха</p>
+                        </li>
+
+                        <li>
+                            <p>Боли во время и после полового контакта</p>
+                        </li>
+
+                        <li>
+                            <p>Нарушение и болезненность мочеиспускания</p>
+                        </li>
+                    </ul>
+
+                </div>
+            </section>
+
+
+            <!-- IMPORTANCE -->
+            <section class="importance slide">
+                <div class="importance__container container">
+                    <h2 class="importance__title">
+                        Почему важно вовремя диагностировать и лечить молочницу у беременной?
+                    </h2>
+
+                    <div class="importance__content">
+
+                        <div class="importance__text">
+                            <p>
+                                Беременная женщина с молочницей является источником инфицирования
+                                своего будущего ребенка. Инфицирование от матери к ребенку
+                                происходит в 75-80% случаев<span class="importance__overline">5</span>. Заражение
+                                новорожденного происходит
+                                при прохождении по родовым путям (кожные покровы ребёнка
+                                соприкасаются с инфицированными слизистыми родовых путей матери).
+                                У новорожденных кандидоз проявляется поражением слизистых оболочек
+                                и кожи<span class="importance__overline">5</span>, что может привести к негативным
+                                последствиям. Для
+                                недоношенных детей заражение грибами рода Candida особенно
+                                опасно<span class="importance__overline">5</span>.
+                            </p>
+                        </div>
+
+                        <div class="importance__card">
+                            <img src="public/img/importance/importance-card-img.png" alt="Информационная карточка"
+                                width="110" height="180" loading="lazy" draggable="false" />
+                            <p>
+                                Часть женщин является бессимптомными носителями дрожжеподобных
+                                грибов рода Candida и не испытывают ни дискомфорта, ни
+                                проявления заболевания на протяжение всего периода беременности<span
+                                    class="importance__overline">5</span>
+                            </p>
+                        </div>
+
+                    </div>
+
+                    <p class="importance__conclusion">
+                        Своевременное, безопасное и эффективное лечение молочницы<br />у
+                        беременной является важной задачей
+                    </p>
+
+                </div>
+            </section>
+
+
+            <!-- TREATMENT -->
+            <section class="treatment slide">
+                <div class="treatment__container container">
+
+                    <h2 class="treatment__title">Лечение молочницы</h2>
+
+                    <div class="treatment__content">
+
+                        <div class="treatment__card">
+                            <img src="public/img/treatment/treatment-card-img.png" alt="Информационная карточка"
+                                width="110" height="140" loading="lazy" draggable="false" />
+                            <p>
+                                Безопасность и эффективность – основные критерии выбора
+                                препарата при лечении молочницы у беременных
+                            </p>
+                        </div>
+
+                        <div class="treatment__text">
+                            <p>
+                                Чем раньше проведена диагностика и назначено лечение молочницы
+                                беременной женщине, тем меньше риск негативных последствий и
+                                осложнений на течение беременности и для здоровья матери, и её
+                                будущего ребёнка.
+                            </p>
+                        </div>
+
+                    </div>
+
+
+                    <p class="treatment__description">
+                        Лечение должно быть направлено на решение двух задач: устранения причины
+                        молочницы (грибы рода Candida) и восстановление микрофлоры влагалища.
+                        Важно знать, что не все препараты разрешены к применению во время
+                        беременности. Например, большинство препаратов для приема внутрь
+                        (системные) и ряд препаратов для местного применения для лечения
+                        молочницы противопоказаны во время беременности.
+                    </p>
+
+                </div>
+            </section>
+
+
+            <!-- EFFECTIVENESS -->
+            <section class="effectiveness slide">
+                <div class="effectiveness__container container">
+
+                    <h2 class="effectiveness__title">
+                        Эффективность и безопасность применения препарата
+                        <span class="accent-color">Экофуцин<span class="trademark">®</span></span> доказана клиническими
+                        исследованиями
+                    </h2>
+
+                    <div class="effectiveness__slider effectiveness__content">
+                        <ul class="effectiveness__slides">
+
+                            <li class="effectiveness__card effectiveness-card effectiveness__slide">
+                                <img src="public/img/effectiveness/effectiveness-icon-1.png" alt="Бактерии" width="60"
+                                    height="60" loading="lazy" class="effectiveness-card__icon" draggable="false">
+                                <p class="effectiveness-card__description">
+                                    Экофуцин способствует более быстрому выздоровлению пациенток с
+                                    молочницей.
+                                </p>
+                                <img src="public/img/effectiveness/effectiveness-img-1.png" alt="График" width="350"
+                                    height="292" loading="lazy" draggable="false" class="effectiveness-card__img">
+                            </li>
+
+                            <li class="effectiveness__card effectiveness-card effectiveness-slide">
+                                <img src="public/img/effectiveness/effectiveness-icon-2.png" alt="Календарь" width="60"
+                                    height="60" loading="lazy" class="effectiveness-card__icon" draggable="false">
+                                <p class="effectiveness-card__description">
+                                    Экофуцин способствует увеличению количества собственных
+                                    лактобактерий во влагалище и снижению риска развития рецидива
+                                    молочницы.
+                                </p>
+                                <img src="public/img/effectiveness/effectiveness-img-2.png" alt="График" width="350"
+                                    height="292" loading="lazy" draggable="false" class="effectiveness-card__img">
+                            </li>
+
+                            <li class="effectiveness__card effectiveness-card effectiveness-slide">
+                                <h3 class="effectiveness-card__title">Подробнее</h3>
+                                <span class="effectiveness-card__for">Для беременных</span>
+                                <span class="effectiveness-card__location">Москва</span>
+                                <span class="effectiveness-card__count">40 пациенток</span>
+
+
+                                <div class="effectiveness-card__results effectiveness-result">
+                                    <img src="public/img/effectiveness/qoutes.png" class="effectiveness-card__quotes"
+                                        alt="" width="30" height="22" loading="lazy" />
+                                    <p class="effectiveness-result__text">
+                                        Клиническое излечение достоверно раньше наступило в группе
+                                        пациенток, применявших препарат <strong>Экофуцин</strong>.
+                                    </p>
+                                    <p class="effectiveness-result__citation">
+                                        Кузьмин В.Н., Богданова М.Н. Экофуцин® – первый препарат для
+                                        эрадикации грибов рода Candida с эффектом стимуляции роста
+                                        лактобацилл у беременных женщин. РМЖ. 2020; 1; 28-33
+                                    </p>
+                                </div>
+
+                            </li>
+
+                        </ul>
+
+                        <button class="prev">&#10094;</button>
+                        <button class="next">&#10095;</button>
+                    </div>
+                </div>
+            </section>
+
+
+            <!-- THANKS -->
+            <div class="thanks slide">
+                <div class="thanks__container">
+                    <div class="thanks__wrapper">
+
+                        <div class="thanks__text thanks-text">
+                            <div class="thanks-text__title">Спасибо,<br> что выбираете Экофуцин® !</div>
+                            <div class="thanks-text__description">С&nbsp;Экофуцин<sup class="reg">®</sup>
+                                ты&nbsp;заботишься
+                                о&nbsp;своем здоровье и&nbsp;здоровье
+                                своего будущего малыша!
+                            </div>
+                            <a class="thanks-text__where-buy " href="/">Где купить <img
+                                    src="public/img/thanks/basket.svg" alt="иконка" width="26">
+                            </a>
+                        </div>
+
+                        <div class="thanks__images">
+                            <img src="public/img/usage/usage-product-3.png" alt="Упаковка препарата"
+                                class="package-image" width="202" height="209" loading="lazy" draggable="false" />
+                            <img src="public/img/usage/usage-product-6.png" alt="Суппозитории"
+                                class="suppositories-image" width="202" height="209" loading="lazy" draggable="false" />
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- FOOTER -->
+            <footer class="footer slide">
+                <span class="footer__anchor"></span>
+                <div class="footer__inner">
+
+                    <div class="footer__privacy-policy">
+                        <a href="/politika-konfidentsialnosti/" target="_blank">Политика конфиденциальности</a>
+
+                        <span>Информация на данном сайте носит информационный характер</span>
+                    </div>
+
+
+                    <div class="footer__forma">
+                        <div class="footer__left">
+                            <div class="footer__logo">
+                                <a href="https://www.avva-rus.ru/"><img src="public/img/footer/footer.png"
+                                        alt="www.avva-rus.ru"></a>
+                            </div>
+                            <br>
+                            <div class="footer__address">ул. Крылатские Холмы, д. 30, стр.9 Москва, Россия, 121614</div>
+                        </div>
+
+                        <p>Если у Вас есть претензии к качеству продукции, либо Вы хотите сообщить о нежелательном
+                            явлении,
+                            индивидуальной непереносимости, отсутствии заявленной эффективности, случаях передачи
+                            инфекционного
+                            заболевания через лекарственный препарат, нежелательных реакциях, возникших вследствие
+                            злоупотребления
+                            препаратом или других случаях неблагоприятного воздействия в результате приёма лекарственных
+                            препаратов
+                            производства компании АО «АВВА РУС», Вы можете сообщить о них производителю:</p>
+                        <ul>
+                            <li>заполнив прилагаемую
+                                <a href="/upload/pdf/Karta_izveshenie_o_HP.docx" target="_blank">форму-извещение </a> о
+                                нежелательном
+                                явлении на сайте <a
+                                    href="https://www.avva-rus.ru/contacts/">https://www.avva-rus.ru/contacts/</a>
+                            </li>
+                            <li>прислав информацию на электронную почту: <a target="_blank"
+                                    href="mailto:drug.safety@avva-rus.ru">drug.safety@avva-rus.ru</a></li>
+                            <li>позвонив по телефону: <a href="tel:+74959567554">+7 (495) 956-75-54</a></li>
+                            <li>отправив сообщение через WhatsApp, Viber на номер: +7-903-799-2-186</li>
+                        </ul>
+
+                    </div>
+
+                    <div class="footer__contraindications">
+                        <span>Имеются противопоказания.</span> Перед применением ознакомьтесь с инструкцией.
+                    </div>
+
+                </div>
+            </footer>
 
 
         </div>
