--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
                         исследованиями
                     </h2>
 
-                    <div class="effectiveness__slider effectiveness__content">
-                        <ul class="effectiveness__slides">
+                    <div class="effectiveness__content">
+                        <ul class="effectiveness__list">
 
-                            <li class="effectiveness__card effectiveness-card effectiveness__slide">
+                            <li class="effectiveness__card effectiveness-card">
                                 <img src="public/img/effectiveness/effectiveness-icon-1.png" alt="Бактерии" width="60"
                                     height="60" loading="lazy" class="effectiveness-card__icon" draggable="false">
                                 <p class="effectiveness-card__description">
@@ -414,7 +414,7 @@
                                     height="292" loading="lazy" draggable="false" class="effectiveness-card__img">
                             </li>
 
-                            <li class="effectiveness__card effectiveness-card effectiveness-slide">
+                            <li class="effectiveness__card effectiveness-card">
                                 <img src="public/img/effectiveness/effectiveness-icon-2.png" alt="Календарь" width="60"
                                     height="60" loading="lazy" class="effectiveness-card__icon" draggable="false">
                                 <p class="effectiveness-card__description">
@@ -426,7 +426,7 @@
                                     height="292" loading="lazy" draggable="false" class="effectiveness-card__img">
                             </li>
 
-                            <li class="effectiveness__card effectiveness-card effectiveness-slide">
+                            <li class="effectiveness__card effectiveness-card">
                                 <h3 class="effectiveness-card__title">Подробнее</h3>
                                 <span class="effectiveness-card__for">Для беременных</span>
                                 <span class="effectiveness-card__location">Москва</span>
@@ -451,8 +451,6 @@
 
                         </ul>
 
-                        <button class="prev">&#10094;</button>
-                        <button class="next">&#10095;</button>
                     </div>
                 </div>
             </section>
