modified:   css/main.css 	modified:   css/main.css.map 	modified:   index.html 	modified:   main.js 	modified:   scss/_globals.scss 	modified:   scss/_utils.scss 	modified:   scss/block/_benefits.scss 	modified:   scss/block/_effectiveness.scss 	modified:   scss/block/_footer.scss 	modified:   scss/block/_header.scss 	modified:   scss/block/_hero.scss 	modified:   scss/block/_thanks.scss 	modified:   scss/block/_thrush.scss

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
             <!-- THANKS -->
             <div class="thanks slide">
-                <div class="thanks__container">
+                <div class="thanks__container container">
                     <div class="thanks__wrapper">
 
                         <div class="thanks__text thanks-text">
