modified:   css/main.css 	modified:   css/main.css.map 	modified:   index.html 	modified:   main.js 	modified:   scss/block/_footer.scss 	modified:   scss/block/_hero.scss 	modified:   scss/block/_treatment.scss

--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
                             назначаться лечащим врачом индивидуально.
                         </p>
                     </div>
+
+                </div>
             </section>
 
 
